[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Knight.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pieces/WhiteKnight.gd" type="Script" id=2]
[ext_resource path="res://Sprites/LocationMove.png" type="Texture" id=3]
[ext_resource path="res://Sounds/move.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5243, 14.4157 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 11 )

[node name="WhiteKnight" type="KinematicBody2D" groups=[
"WhitePiece",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.0267692 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 1 )
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.117989, 0.943874 )
scale = Vector2( 1.2, 1.2 )
shape = SubResource( 2 )

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast11" type="RayCast2D" parent="RayCasts"]
position = Vector2( -69.8748, -26.4566 )
rotation = 3.14159
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 15, 15 )

[node name="Area2D" type="Area2D" parent="RayCasts/RayCast11"]
position = Vector2( -49.9105, -18.8977 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast11/Area2D"]
position = Vector2( 62, 31.5 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="RayCasts/RayCast11/Area2D"]
position = Vector2( 62.213, 31.2259 )
rotation = 2.27374e-13
texture = ExtResource( 3 )

[node name="RayCast12" type="RayCast2D" parent="RayCasts"]
position = Vector2( -69.8748, 61.6442 )
rotation = 3.14159
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 15, 15 )

[node name="Area2D" type="Area2D" parent="RayCasts/RayCast12"]
position = Vector2( -49.9105, -18.8977 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast12/Area2D"]
position = Vector2( 62, 31.5 )
shape = SubResource( 3 )

[node name="Sprite2" type="Sprite" parent="RayCasts/RayCast12/Area2D"]
position = Vector2( 62.213, 31.0878 )
rotation = 2.27374e-13
texture = ExtResource( 3 )

[node name="RayCast13" type="RayCast2D" parent="RayCasts"]
position = Vector2( -27.4118, 106.091 )
rotation = 3.14159
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 15, 15 )

[node name="Area2D" type="Area2D" parent="RayCasts/RayCast13"]
position = Vector2( -49.9105, -18.8977 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast13/Area2D"]
position = Vector2( 62, 31.5 )
shape = SubResource( 3 )

[node name="Sprite3" type="Sprite" parent="RayCasts/RayCast13/Area2D"]
position = Vector2( 61.8949, 31.6192 )
rotation = 2.27374e-13
texture = ExtResource( 3 )

[node name="RayCast14" type="RayCast2D" parent="RayCasts"]
position = Vector2( 61.0858, 105.893 )
rotation = 3.14159
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 15, 15 )

[node name="Area2D" type="Area2D" parent="RayCasts/RayCast14"]
position = Vector2( -49.9105, -18.8977 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast14/Area2D"]
position = Vector2( 62, 31.5 )
shape = SubResource( 3 )

[node name="Sprite4" type="Sprite" parent="RayCasts/RayCast14/Area2D"]
position = Vector2( 61.9181, 31.6669 )
rotation = 4.54748e-13
texture = ExtResource( 3 )

[node name="RayCast15" type="RayCast2D" parent="RayCasts"]
position = Vector2( 104.862, 61.5557 )
rotation = 3.14159
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 15, 15 )

[node name="Area2D" type="Area2D" parent="RayCasts/RayCast15"]
position = Vector2( -49.9105, -18.8977 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast15/Area2D"]
position = Vector2( 62, 31.5 )
shape = SubResource( 3 )

[node name="Sprite5" type="Sprite" parent="RayCasts/RayCast15/Area2D"]
position = Vector2( 62.1154, 31.0689 )
rotation = 6.82121e-13
texture = ExtResource( 3 )

[node name="RayCast16" type="RayCast2D" parent="RayCasts"]
position = Vector2( 104.581, -26.2769 )
rotation = 3.14159
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 15, 15 )

[node name="Area2D" type="Area2D" parent="RayCasts/RayCast16"]
position = Vector2( -49.9105, -18.8977 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast16/Area2D"]
position = Vector2( 62, 31.5 )
shape = SubResource( 3 )

[node name="Sprite6" type="Sprite" parent="RayCasts/RayCast16/Area2D"]
position = Vector2( 62.2718, 31.5456 )
rotation = 4.54748e-13
scale = Vector2( 0.999999, 0.999999 )
texture = ExtResource( 3 )

[node name="RayCast17" type="RayCast2D" parent="RayCasts"]
position = Vector2( 60.5246, -69.4917 )
rotation = 3.14159
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 15, 15 )

[node name="Area2D" type="Area2D" parent="RayCasts/RayCast17"]
position = Vector2( -49.9105, -18.8977 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast17/Area2D"]
position = Vector2( 62, 31.5 )
shape = SubResource( 3 )

[node name="Sprite7" type="Sprite" parent="RayCasts/RayCast17/Area2D"]
position = Vector2( 62.2315, 31.035 )
rotation = 4.54748e-13
scale = Vector2( 0.999999, 0.999999 )
texture = ExtResource( 3 )

[node name="RayCast18" type="RayCast2D" parent="RayCasts"]
position = Vector2( -27.308, -69.7723 )
rotation = 3.14159
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 15, 15 )

[node name="Area2D" type="Area2D" parent="RayCasts/RayCast18"]
position = Vector2( -49.9105, -18.8977 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast18/Area2D"]
position = Vector2( 62, 31.5 )
shape = SubResource( 3 )

[node name="Sprite8" type="Sprite" parent="RayCasts/RayCast18/Area2D"]
position = Vector2( 61.994, 31.5489 )
rotation = 4.54748e-13
scale = Vector2( 0.999999, 0.999999 )
texture = ExtResource( 3 )

[node name="KillCast" type="RayCast2D" parent="."]
position = Vector2( -0.187286, -21.9281 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
pitch_scale = 0.8
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast11/Area2D" to="." method="_on_Area2D1_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast11/Area2D" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast12/Area2D" to="." method="_on_Area2D2_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast12/Area2D" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast13/Area2D" to="." method="_on_Area2D3_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast13/Area2D" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast14/Area2D" to="." method="_on_Area2D4_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast14/Area2D" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast15/Area2D" to="." method="_on_Area2D5_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast15/Area2D" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast16/Area2D" to="." method="_on_Area2D6_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast16/Area2D" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast17/Area2D" to="." method="_on_Area2D7_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast17/Area2D" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast18/Area2D" to="." method="_on_Area2D8_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast18/Area2D" to="." method="mouse_exited"]
